# genie-nlp

./: .gitignore  README.md
core/: Cargo.toml
core/src/: choice.rs  genie.rs
genie-nlp/: Cargo.toml
genie-nlp/src/: choice.rs  genie.rs  main.rs  search.rs
website/: index.html
