[package]
name = "genie-nlp"
version = "0.1.0"
authors = ["Smail Barkouch <SmailBarkouch1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.11.0"
wikipedia = "0.3.4"
reqwest = {version = "0.10.8", features = ["blocking"]}
scraper = "0.12.0"
select = "0.5.0"
